# learn_flask

./: 05_static_files_bootstrap.py  06_session_cookies.py  MOCK_DATA.xlsx  README.md  app.py  demo_text.txt  forms.py  main.py  pyproject.toml  requirements.txt  session_cookies.py  static_files.py  upload.py
static/css/: style.css
templates/: 05_static_files_bootstrap.html  06.1_login.html  06_session_cookies.html  about.html  base.html  footer.html  forms.html  index.html  session_cookies.html  static_files.html  upload.html
