[project]
name = "learn-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "et-xmlfile==2.0.0",
    "flask==3.1.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "pandas==3.0.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "werkzeug==3.1.8",
]
